--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,3 +1,11 @@
+<div class="container">
+
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="page-header">
+          <h1>Edit <%= resource_name.to_s.humanize %></h1>
+      </div>
+      
     <div class="col-lg-8 col-lg-offset-2">
      <div class="well">
         <div class="panel panel-info">
