--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -53,7 +53,7 @@
                     </li>
                   </ul>
 
-            <%= link_to 'Back', products_path, class: "btn btn-info "  %> |
+            <%= link_to 'Back to All Products', products_path, class: "btn btn-info "  %> |
             <%= link_to 'Edit', edit_product_path(@product), class: "btn btn-warning btn-sm"  %> |            
             <%= link_to 'Delete', @product, class: "btn btn-danger btn-sm",method: :delete, data: { confirm: 'Are you sure?' } %>
 
