--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -27,6 +27,31 @@
           <%= f.text_field :title, class: "form-control" %>
 
         </div>
+
+        <div class="form-group">
+          <label class="ontrol-label">
+
+              My Product is ...
+
+          </label>
+          <div class="col-lg-8 col-lg-offset-2">
+              <div class="radio">
+                  <label>
+                      <input id="optionsRadios1" type="radio" checked="" value="true" name="optionsRadios"></input>
+                            <option selected>available</option>
+                  </label>
+              </div>
+              <div class="radio">
+                  <label>
+                      <input id="optionsRadios2" type="radio" value="false" name="optionsRadios"></input>
+                            currently not available
+                  </label>
+              </div>
+          </div>
+
+      </div>
+       
+
           <div class="form-group has-success">
             <label class="control-label" for="inputSuccess"><%= f.label :category %></label>
             
