--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -28,11 +28,10 @@
 
         <div class="form-group">
           <label class="control-label">
-              <%= f.label :"My Product is available" %>
-          </label>
-          
+              <%= f.label :"My Product is available " %>
+                    
               <%= f.check_box :active, {checked: true} %>
-              
+            </label>  
 
           </div>       
 
@@ -60,7 +59,7 @@
             <%= f.text_field :price, :placeholder =>"any prices in € or 'negotiable'",  class: "form-control" %>
           </div>
           <div class="form-group">
-            <%= f.label :"Price is based on" %><br>
+            <%= f.label :"Price related to" %><br>
             <%= f.text_field :duration, :placeholder =>"e.g days, week, month", class: "form-control" %>
           </div>
           <div class="form-group">
