--- a/app/views/products/_table.html.erb
+++ b/app/views/products/_table.html.erb
@@ -13,6 +13,7 @@
               <th>Image</th>      
               <th>User</th>
               <th>Available</th>
+              <th>Available checkbox</th>
           </tr>
       </thead>
 
@@ -32,6 +33,11 @@
             <td><%= product.user.username %></td>
 
             <td><%= product.active %></td>
+            <td>
+              <%= form_for product do |f| %>
+                <%= f.check_box :active, class: "checkable" %>
+              <% end %>
+            </td>
             
           </tr>
         <% end %>
