--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -27,7 +27,10 @@
               <div class="form-group has-success"><%= f.label :gender %><br />
               <%= f.select :gender, ["Woman", "Man" ], {:include_blank => true}, class: "form-control"  %></div>
 
-               <div class="form-group has-success"><%= f.label :address %><br />
+              <div class="form-group has-success"><%= f.label :"Usually I have this size" %><br />
+              <%= f.text_field :size, class: "form-control"  %></div>
+
+              <div class="form-group has-success"><%= f.label :address %><br />
               <%= f.text_field :address, class: "form-control"  %></div>
 
               <div class="form-group has-success"><%= f.label :city %><br />
