--- a/app/views/products/_search.html.erb
+++ b/app/views/products/_search.html.erb
@@ -1,30 +1,50 @@
 <%= form_tag("/products", method: "get")  do %>   
 <div class="row">
 
-  <div class="col-md-3">
+  <div class="col-md-2">
 		<div class="form-group has-success">
 		  <label class="control-label" for="inputSuccess"><%= label_tag :category %></label>
 			<%= select_tag :category_id, options_for_select(Category.all.collect {|c| [ c.name, c.id ] }), :multiple => true, class: "form-control" %>
 		</div>
 	</div>
 
-  <div class="col-md-3">
+  <div class="col-md-2">
 		<div class="form-group has-success">
 		  <label class="control-label" for="inputSuccess"><%= label_tag :target_group %></label>
 			<%= select_tag :target_group, options_for_select(Product.all.group("target_group").collect {|c| [ c.target_group] }), :multiple => true,class: "form-control" %>
 		</div>
 	</div>
 
-  <div class="col-md-3">
+  <div class="col-md-2">
 		<div class="form-group has-success">
 		  <label class="control-label" for="inputSuccess"><%= label_tag :size %></label>
 			<%= select_tag :size, options_for_select(Product.all.group("size").collect {|c| [ c.size] }), :multiple => true, class: "form-control" %>
 		</div>
 	</div>
 
-  <div class="col-md-3">
-  	<br><br><br><br>
-  	<%= submit_tag "Search" , class: "btn btn-success" %>
+	<div class="col-md-2">
+		<div class="form-group has-success">
+		  <label class="control-label" for="inputSuccess"><%= label_tag :color %></label>
+			<%= select_tag :color, options_for_select(Product.all.group("color").collect {|c| [ c.color] }), :multiple => true, class: "form-control" %>
+		</div>
+	</div>
+
+	<div class="col-md-2">
+		<div class="form-group has-success">
+		  <label class="control-label" for="inputSuccess"><%= label_tag :user%></label>
+			<%= select_tag :user_id, options_for_select(User.all.collect {|c| [ c.username, c.id ] }), :multiple => true, class: "form-control" %>
+		</div>
+	</div>
+
+	<div class="col-md-2">
+		<div class="form-group has-success">
+		  <label class="control-label" for="inputSuccess"><%= label_tag :city%></label>
+			<%= select_tag :user_id, options_for_select(User.all.collect {|c| [ c.city, c.id ] }), :multiple => true, class: "form-control" %>
+		</div>
+	</div>
+
+  <div class="col-md-12">
+  	<%= submit_tag "Search" , class: "btn btn-success btn-sm btn-block" %>
 		</div>		
 	</div>
 
