--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -83,16 +83,21 @@
       
 
       <%= link_to 'Back to All Products', products_path, class: "btn btn-info "  %> |
-      <% if @product.user_id != current_user.id %>
-      <%= link_to  (@product.user.username + "'s offers"), users_profile_path(id: @product.user_id, anchor: "user_products"), class: "btn btn-info "  %> 
-      <% else %>
-      <%= link_to  "My offers", users_profile_path(id: @product.user_id, anchor: "user_products"), class: "btn btn-info "  %> 
-      <% end %>
-      <br> <br>
 
-      <% if @product.user_id == current_user.id %>
-      <%= link_to 'Edit', edit_product_path(@product), class: "btn btn-warning btn-sm"  %> |            
-      <%= link_to 'Delete', @product, class: "btn btn-danger btn-sm",method: :delete, data: { confirm: 'Are you sure?' } %>
+      <% if current_user.present? %>
+          <% if @product.user_id != current_user.id %>
+          <%= link_to  (@product.user.username + "'s offers"), users_profile_path(id: @product.user_id, anchor: "user_products"), class: "btn btn-info "  %> 
+          <% else %>
+          <%= link_to  "My offers", users_profile_path(id: @product.user_id, anchor: "user_products"), class: "btn btn-info "  %> 
+          <% end %>
+          <br> <br>
+
+          <% if @product.user_id == current_user.id %>
+          <%= link_to 'Edit', edit_product_path(@product), class: "btn btn-warning btn-sm"  %> |            
+          <%= link_to 'Delete', @product, class: "btn btn-danger btn-sm",method: :delete, data: { confirm: 'Are you sure?' } %>
+          <% end %>
+      <% else %>
+          <%= link_to  (@product.user.username + "'s offers"), users_profile_path(id: @product.user_id, anchor: "user_products"), class: "btn btn-info "  %>
       <% end %>
     </div>
     
